# synth

./: CHANGELOG.md  LICENSE  README.md  syna.cabal
src/: Main.hs
