name:                syna
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollimandoliini/syna#readme
license:             BSD3
license-file:        LICENSE
author:              Olli Kortelahti
maintainer:          ollikortelahti@gmail.com
copyright:           Olli Kortelahti
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable syna
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , OpenAL
                      , bytestring
                      , process
                      , binary
                      , conduit
                      , conduit-extra
                      , binary-conduit
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
